chore: payload config updated

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "format": "prettier . --check",
     "format:fix": "prettier . --write",
     "run:seed": "pnpx tsx ./src/scripts/run-seed.ts",
-    "email": "email dev --dir src/emails",
-    "yalc:contentql/core": "yalc add @contentql/core && yalc link @contentql/core"
+    "email": "email dev --dir src/emails"
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "@contentql/core": "^0.3.2",
+    "@payloadcms/bundler-webpack": "^1.0.0",
     "@hookform/resolvers": "^3.4.0",
+    "@payloadcms/db-mongodb": "3.0.0-beta.110",
     "@payloadcms/live-preview-react": "3.0.0-beta.111",
     "@payloadcms/next": "3.0.0-beta.111",
     "@payloadcms/plugin-form-builder": "3.0.0-beta.111",
