--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "@payloadcms/bundler-webpack": "^1.0.0",
     "@hookform/resolvers": "^3.4.0",
-    "@payloadcms/db-mongodb": "3.0.0-beta.110",
+    "@payloadcms/db-mongodb": "3.0.0-beta.111",
+    "@payloadcms/email-resend": "3.0.0-beta.111",
     "@payloadcms/live-preview-react": "3.0.0-beta.111",
     "@payloadcms/next": "3.0.0-beta.111",
     "@payloadcms/plugin-form-builder": "3.0.0-beta.111",
@@ -46,6 +46,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "deepmerge": "^4.3.1",
     "disqus-react": "^1.1.5",
     "domhandler": "^5.0.3",
     "execa": "^9.3.1",
@@ -68,6 +69,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-json-tree": "^0.19.0",
+    "resend": "^3.2.0",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "sonner": "^1.5.0",
