chore: themes added

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@react-email/components": "^0.0.22",
     "@slate-serializers/html": "^2.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
