--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@payloadcms/ui": "3.0.0-beta.111",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@react-email/components": "^0.0.22",
